objects/VisitOps__Room__c.object
<CustomObject>
    <fields>
        <fullName>VisitOps__Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VisitOps__Location__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Location</label>
        <referenceTo>VisitOps__Location__c</referenceTo>
        <relationshipLabel>Rooms</relationshipLabel>
        <relationshipName>Rooms</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VisitOps__Place__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Place</label>
        <referenceTo>VisitOps__Place__c</referenceTo>
        <relationshipLabel>Rooms</relationshipLabel>
        <relationshipName>Rooms</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VisitOps__Room_Capacity__c</fullName>
        <label>Room Capacity</label>
        <precision>8</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VisitOps__Room_Image__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Room Image</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>VisitOps__Room_set_up_options__c</fullName>
        <label>Room set-up options</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Any</fullName>
                </value>
                <value>
                    <fullName>Boardroom</fullName>
                </value>
                <value>
                    <fullName>Classroom</fullName>
                </value>
                <value>
                    <fullName>Crescents</fullName>
                </value>
                <value>
                    <fullName>Reception</fullName>
                </value>
                <value>
                    <fullName>Rounds</fullName>
                </value>
                <value>
                    <fullName>Theater</fullName>
                </value>
                <value>
                    <fullName>U-shaped</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VisitOps__Technology_AV__c</fullName>
        <label>Technology/ AV</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Requirements</fullName>
                </value>
                <value>
                    <fullName>Attendee Outlets</fullName>
                </value>
                <value>
                    <fullName>Internet Wifi Service</fullName>
                </value>
                <value>
                    <fullName>Microphone</fullName>
                </value>
                <value>
                    <fullName>Overhead Speakers</fullName>
                </value>
                <value>
                    <fullName>Projection</fullName>
                </value>
                <value>
                    <fullName>Screen</fullName>
                </value>
                <value>
                    <fullName>Telepresence</fullName>
                </value>
                <value>
                    <fullName>White Boards</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Room</label>
    <listViews>
        <fullName>VisitOps__All</fullName>
        <columns>NAME</columns>
        <columns>VisitOps__Place__c</columns>
        <columns>VisitOps__Location__c</columns>
        <columns>VisitOps__Room_Capacity__c</columns>
        <columns>VisitOps__Room_set_up_options__c</columns>
        <columns>VisitOps__Technology_AV__c</columns>
        <columns>VisitOps__Description__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Room Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rooms</pluralLabel>
    <recordTypes>
        <fullName>VisitOps__PrivateResource</fullName>
        <active>true</active>
        <description>Used for Private Resources</description>
        <label>Private Resource</label>
    </recordTypes>
    <recordTypes>
        <fullName>VisitOps__Room</fullName>
        <active>true</active>
        <description>Used for Rooms</description>
        <label>Room</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>